# html-preview.nvim

./: .gitignore  BoostDownloader.cmake  CMakeLists.txt  README.md  compile_commands.json  neoweb_preview-0.0.1.rockspec  out.ogv
.cache/clangd/index/: acceptor.hpp.0D7198F522EECD7E.idx  application.hpp.46B568D2FFD946A7.idx  attribute.hpp.5752E52199FEA224.idx  attributes.hpp.4F98FB0DD69DB79A.idx  base64.hpp.3709F6B49DF31B08.idx  beauty.hpp.78E4A5A24C6ABCB1.idx  certificate.hpp.267C082D3CB16924.idx  client.hpp.7756CF1113DC61F1.idx  endpoint.hpp.E85D66E8A21DDF62.idx  exception.hpp.13AF74FC3E5B400A.idx  header.hpp.07B283AB4F47E4F7.idx  main.cpp.5F41EBCB8C8CFDE8.idx  request.hpp.634CAF9C9704D15A.idx  response.hpp.6790BE9E8D586EF7.idx  route.hpp.C9405CCB197C468E.idx  router.hpp.9A83329D8EFA41B0.idx  server.hpp.6AFBC5DDC3AD3214.idx  server.hpp.A679DDA5B4D2540B.idx  session.hpp.8AF1442C3468114E.idx  signal.hpp.08A0017495A23FCA.idx  swagger.hpp.A3161AC7052DFE55.idx  timer.hpp.EDE411CF7CA4418F.idx  url.hpp.B88A013331401630.idx  utils.hpp.4CFD94DECF416A82.idx  utils.hpp.C77E71FADFCF06B4.idx  version.hpp.E6B652DFD97BCC77.idx  websocket_client.hpp.C398172504948A26.idx  websocket_context.hpp.D7A5FCD73218230C.idx  websocket_handler.hpp.8A0BF205AAB50A65.idx  websocket_session.hpp.7FAAD11A5ACFD93E.idx
include/: livejs.hpp  server.hpp  utils.hpp
lua/: neoweb_preview.lua
lua/html_preview/: init.lua  server.lua
lua/html_preview/http/: iframe.lua  response.lua
lua/html_preview/websocket/: init.lua  sha1.lua  utils.lua
lua/neo_webpreview/: init.lua
lua/neoweb_preview/: config.lua  init.lua  server.lua  task.lua
lua/neoweb_preview/http/: iframe.lua  request.lua  response.lua
lua/neoweb_preview/websocket/: init.lua  sha1.lua
lua/plugins/: nwp.lua
lua/server/: init.lua
lua/server/plugins/: static.lua
plug.bak/: neo_webpreview.vim
plugin/: neo_webpreview.vim  neoweb_preview.lua
src/: main.cpp  nwp.cpp
